Set handle positions node does not respect side setting #96577

Closed
opened 2022-03-17 22:34:39 +01:00 by Richard Antalik · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-14 00:08, hash: b959f603da
Worked: (newest version of Blender that worked as expected)

Short description of error
I want to offset left handles of 2 straight curves, but clearly right and left handle is offset.
#96573.png

Exact steps for others to reproduce the error

  • Open file
  • Change any of the End Handle or End values of the left Bezier Segment
    Note that both segments are affected
    #96573.blend
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-14 00:08, hash: `b959f603da` Worked: (newest version of Blender that worked as expected) **Short description of error** I want to offset left handles of 2 straight curves, but clearly right and left handle is offset. ![#96573.png](https://archive.blender.org/developer/F12932314/T96573.png) **Exact steps for others to reproduce the error** - Open file - Change any of the `End Handle` or `End` values of the left `Bezier Segment` Note that both segments are affected [#96573.blend](https://archive.blender.org/developer/F12932313/T96573.blend)
Author
Member

Added subscriber: @iss

Added subscriber: @iss
Author
Member

Bonus bug: if I duplicate whole tree and join geometry, because I want to do comparison, geometry of duplicated nodes looks completely different. Not sure if this is another bug or another symptom of this one.

Bonus bug: if I duplicate whole tree and join geometry, because I want to do comparison, geometry of duplicated nodes looks completely different. Not sure if this is another bug or another symptom of this one.

Added subscriber: @crowe

Added subscriber: @crowe

In #96577#1324971, @iss wrote:
Bonus bug: if I duplicate whole tree and join geometry, because I want to do comparison, geometry of duplicated nodes looks completely different. Not sure if this is another bug or another symptom of this one.

@iss Hi! Just checked your file and seems the same bug. If you're placing Set Handle Position after the duplication then it can go boink in an entirely new direction, since it's latching to the handle of whatever curve comes first.

> In #96577#1324971, @iss wrote: > Bonus bug: if I duplicate whole tree and join geometry, because I want to do comparison, geometry of duplicated nodes looks completely different. Not sure if this is another bug or another symptom of this one. @iss Hi! Just checked your file and seems the same bug. If you're placing Set Handle Position after the duplication then it can go boink in an entirely new direction, since it's latching to the handle of whatever curve comes first.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Jacques Lucke self-assigned this 2022-03-22 10:35:11 +01:00

This issue was referenced by e0ce1c45f8

This issue was referenced by e0ce1c45f840bac0b8001ea9f70b0491f8cc04b6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96577
No description provided.