Fix T96577: setting curve handles not working correctly with multiple curves

Differential Revision: https://developer.blender.org/D14409